Created the buttons for the calculator. Added styling to the page, toposition the buttons in the right place for the time being. Will need to fix the layout for the full page when devtools aren't open at a later date. Also added a display box.

--- a/calculator.html
+++ b/calculator.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html>
 
+<link href="calculator-style.css" rel="stylesheet">
+
 <head>
 	<title>Calculator</title>
 	<meta charset="UTF-8"/>
 </head>
 
 <body>
-	<div>
+	<div id="container">
+		<div id="display">
+		</div>
+		<div id="buttons">
+			<button class ="numBtn" type="button">7</button>
+			<button class="numBtn" type="button">8</button>
+			<button class="numBtn" type="button">9</button>
+			<button class="numBtn" type="button">4</button>
+			<button class="numBtn" type="button">5</button>
+			<button class="numBtn" type="button">6</button>
+			<button class="numBtn" type="button">1</button>
+			<button class="numBtn" type="button">2</button>
+			<button class="numBtn" type="button">3</button>
+			<button class="numBtn" type="button">0</button>
+			<button class="numBtn" id="clearBtn" type="button">CLEAR</button>
+			<button class="numBtn" type="button">=</button>
+			<button class="numBtn" type="button">+</button>
+			<button class="numBtn" type="button">-</button>
+			<button class="numBtn" type="button">/</button>
+			<button class="numBtn" type="button">*</button>
+		</div>
 	</div>
 	<script src="CalculatorJavascript.js"></script>
 </body>
