--- a/calculator.html
+++ b/calculator.html
@@ -10,25 +10,24 @@
 
 <body>
 	<div id="container">
-		<div id="display">
-		</div>
+		<p id="display"></p>
 		<div id="buttons">
 			<button class ="numBtn" type="button">7</button>
 			<button class="numBtn" type="button">8</button>
 			<button class="numBtn" type="button">9</button>
-			<button class="numBtn" type="button">4</button>
-			<button class="numBtn" type="button">5</button>
-			<button class="numBtn" type="button">6</button>
+			<button class="numBtn" type="button" value="4">4</button>
+			<button class="numBtn" type="button" value="5">5</button>
+			<button class="numBtn" type="button" value="6">6</button>
 			<button class="numBtn" type="button">1</button>
 			<button class="numBtn" type="button">2</button>
 			<button class="numBtn" type="button">3</button>
 			<button class="numBtn" type="button">0</button>
-			<button class="numBtn" id="clearBtn" type="button">CLEAR</button>
-			<button class="numBtn" type="button">=</button>
-			<button class="numBtn" type="button">+</button>
-			<button class="numBtn" type="button">-</button>
-			<button class="numBtn" type="button">/</button>
-			<button class="numBtn" type="button">*</button>
+			<button class="numBtn" id="clearBtn" type="button" data-action="clear">CLEAR</button>
+			<button class="numBtn" type="button" data-action="calculate">=</button>
+			<button class="numBtn" type="button" data-action="add">+</button>
+			<button class="numBtn" type="button" data-action="subtract">-</button>
+			<button class="numBtn" type="button" data-action="divide">/</button>
+			<button class="numBtn" type="button" data-action="multiply">*</button>
 		</div>
 	</div>
 	<script src="CalculatorJavascript.js"></script>
